include_directories ("${CMAKE_SOURCE_DIR}/include")

set(GENERATOR_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include/generator")

set(GENERATOR_HEADERS
	${GENERATOR_INCLUDE_DIR}/AnyGenerator.hpp
	${GENERATOR_INCLUDE_DIR}/AnyMesh.hpp
	${GENERATOR_INCLUDE_DIR}/AnyPath.hpp
	${GENERATOR_INCLUDE_DIR}/AnyShape.hpp
	${GENERATOR_INCLUDE_DIR}/AxisFlipMesh.hpp
	${GENERATOR_INCLUDE_DIR}/Axis.hpp
	${GENERATOR_INCLUDE_DIR}/AxisSwapMesh.hpp
	${GENERATOR_INCLUDE_DIR}/AxisSwapPath.hpp
	${GENERATOR_INCLUDE_DIR}/AxisSwapShape.hpp
	${GENERATOR_INCLUDE_DIR}/BezierMesh.hpp
	${GENERATOR_INCLUDE_DIR}/BezierShape.hpp
	${GENERATOR_INCLUDE_DIR}/BoxMesh.hpp
	${GENERATOR_INCLUDE_DIR}/CappedConeMesh.hpp
	${GENERATOR_INCLUDE_DIR}/CappedCylinderMesh.hpp
	${GENERATOR_INCLUDE_DIR}/CappedTubeMesh.hpp
	${GENERATOR_INCLUDE_DIR}/CapsuleMesh.hpp
	${GENERATOR_INCLUDE_DIR}/CircleShape.hpp
	${GENERATOR_INCLUDE_DIR}/ConeMesh.hpp
	${GENERATOR_INCLUDE_DIR}/ConvexPolygonMesh.hpp
	${GENERATOR_INCLUDE_DIR}/CylinderMesh.hpp
	${GENERATOR_INCLUDE_DIR}/DiskMesh.hpp
	${GENERATOR_INCLUDE_DIR}/DodecahedronMesh.hpp
	${GENERATOR_INCLUDE_DIR}/Edge.hpp
	${GENERATOR_INCLUDE_DIR}/EmptyMesh.hpp
	${GENERATOR_INCLUDE_DIR}/EmptyPath.hpp
	${GENERATOR_INCLUDE_DIR}/EmptyShape.hpp
	${GENERATOR_INCLUDE_DIR}/ExtrudeMesh.hpp
	${GENERATOR_INCLUDE_DIR}/FlipMesh.hpp
	${GENERATOR_INCLUDE_DIR}/FlipPath.hpp
	${GENERATOR_INCLUDE_DIR}/FlipShape.hpp
	${GENERATOR_INCLUDE_DIR}/generator.hpp
	${GENERATOR_INCLUDE_DIR}/GridShape.hpp
	${GENERATOR_INCLUDE_DIR}/HelixPath.hpp
	${GENERATOR_INCLUDE_DIR}/IcosahedronMesh.hpp
	${GENERATOR_INCLUDE_DIR}/IcoSphereMesh.hpp
	${GENERATOR_INCLUDE_DIR}/Iterator.hpp
	${GENERATOR_INCLUDE_DIR}/KnotPath.hpp
	${GENERATOR_INCLUDE_DIR}/LatheMesh.hpp
	${GENERATOR_INCLUDE_DIR}/LinePath.hpp
	${GENERATOR_INCLUDE_DIR}/LineShape.hpp
	${GENERATOR_INCLUDE_DIR}/math.hpp
	${GENERATOR_INCLUDE_DIR}/MergeMesh.hpp
	${GENERATOR_INCLUDE_DIR}/MergePath.hpp
	${GENERATOR_INCLUDE_DIR}/MergeShape.hpp
	${GENERATOR_INCLUDE_DIR}/MeshVertex.hpp
	${GENERATOR_INCLUDE_DIR}/MirrorMesh.hpp
	${GENERATOR_INCLUDE_DIR}/ObjWriter.hpp
	${GENERATOR_INCLUDE_DIR}/ParametricMesh.hpp
	${GENERATOR_INCLUDE_DIR}/ParametricPath.hpp
	${GENERATOR_INCLUDE_DIR}/ParametricShape.hpp
	${GENERATOR_INCLUDE_DIR}/PathVertex.hpp
	${GENERATOR_INCLUDE_DIR}/PlaneMesh.hpp
	${GENERATOR_INCLUDE_DIR}/RectangleShape.hpp
	${GENERATOR_INCLUDE_DIR}/RepeatMesh.hpp
	${GENERATOR_INCLUDE_DIR}/RepeatPath.hpp
	${GENERATOR_INCLUDE_DIR}/RepeatShape.hpp
	${GENERATOR_INCLUDE_DIR}/RotateMesh.hpp
	${GENERATOR_INCLUDE_DIR}/RotatePath.hpp
	${GENERATOR_INCLUDE_DIR}/RotateShape.hpp
	${GENERATOR_INCLUDE_DIR}/RoundedBoxMesh.hpp
	${GENERATOR_INCLUDE_DIR}/RoundedRectangleShape.hpp
	${GENERATOR_INCLUDE_DIR}/ScaleMesh.hpp
	${GENERATOR_INCLUDE_DIR}/ScalePath.hpp
	${GENERATOR_INCLUDE_DIR}/ScaleShape.hpp
	${GENERATOR_INCLUDE_DIR}/ShapeToPath.hpp
	${GENERATOR_INCLUDE_DIR}/ShapeVertex.hpp
	${GENERATOR_INCLUDE_DIR}/SphereMesh.hpp
	${GENERATOR_INCLUDE_DIR}/SphericalConeMesh.hpp
	${GENERATOR_INCLUDE_DIR}/SphericalTriangleMesh.hpp
	${GENERATOR_INCLUDE_DIR}/SpherifyMesh.hpp
	${GENERATOR_INCLUDE_DIR}/SpringMesh.hpp
	${GENERATOR_INCLUDE_DIR}/SubdivideMesh.hpp
	${GENERATOR_INCLUDE_DIR}/SubdividePath.hpp
	${GENERATOR_INCLUDE_DIR}/SubdivideShape.hpp
	${GENERATOR_INCLUDE_DIR}/SvgWriter.hpp
	${GENERATOR_INCLUDE_DIR}/TeapotMesh.hpp
	${GENERATOR_INCLUDE_DIR}/TorusKnotMesh.hpp
	${GENERATOR_INCLUDE_DIR}/TorusMesh.hpp
	${GENERATOR_INCLUDE_DIR}/TransformMesh.hpp
	${GENERATOR_INCLUDE_DIR}/TransformPath.hpp
	${GENERATOR_INCLUDE_DIR}/TransformShape.hpp
	${GENERATOR_INCLUDE_DIR}/TranslateMesh.hpp
	${GENERATOR_INCLUDE_DIR}/TranslatePath.hpp
	${GENERATOR_INCLUDE_DIR}/TranslateShape.hpp
	${GENERATOR_INCLUDE_DIR}/Triangle.hpp
	${GENERATOR_INCLUDE_DIR}/TriangleMesh.hpp
	${GENERATOR_INCLUDE_DIR}/TubeMesh.hpp
	${GENERATOR_INCLUDE_DIR}/utils.hpp
	${GENERATOR_INCLUDE_DIR}/UvFlipMesh.hpp
	${GENERATOR_INCLUDE_DIR}/UvSwapMesh.hpp
)

set(GENERATOR_SOURCES
	AnyMesh.cpp
	AnyPath.cpp
	AnyShape.cpp
	BoxMesh.cpp
	CappedConeMesh.cpp
	CappedCylinderMesh.cpp
	CappedTubeMesh.cpp
	CapsuleMesh.cpp
	CircleShape.cpp
	ConeMesh.cpp
	ConvexPolygonMesh.cpp
	CylinderMesh.cpp
	DiskMesh.cpp
	DodecahedronMesh.cpp
	EmptyMesh.cpp
	EmptyPath.cpp
	EmptyShape.cpp
	GridShape.cpp
	HelixPath.cpp
	IcosahedronMesh.cpp
	IcoSphereMesh.cpp
	KnotPath.cpp
	LinePath.cpp
	LineShape.cpp
	ObjWriter.cpp
	RectangleShape.cpp
	SphereMesh.cpp
	SphericalConeMesh.cpp
	SphericalTriangleMesh.cpp
	SpringMesh.cpp
	SvgWriter.cpp
	ParametricMesh.cpp
	ParametricPath.cpp
	ParametricShape.cpp
	PlaneMesh.cpp
	RoundedBoxMesh.cpp
	RoundedRectangleShape.cpp
	TeapotMesh.cpp
	TorusKnotMesh.cpp
	TorusMesh.cpp
	TriangleMesh.cpp
	TubeMesh.cpp
)

add_library(generator${SUFFIX} STATIC ${GENERATOR_SOURCES} ${GENERATOR_HEADERS})

